plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.utopia'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web' // Keep Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-jdbc' // Use plain JDBC
	runtimeOnly 'org.postgresql:postgresql' // Keep PostgreSQL driver
	implementation 'com.zaxxer:HikariCP:5.1.0'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
}
